Update branding in Layout and Home components; change "ANARCHIC" to "UNAGILE.ME" for consistency; introduce new article "The Scope Delusion" with updated content and excerpt; enhance styles for underlined text in styles.css.

--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,10 @@ article hr ~ p {
 
 article hr ~ p strong{
 text-decoration: underline;
+text-decoration-thickness: 0.125em;
+text-decoration-style:solid;
 text-underline-offset: 0.25em;
+-webkit-text-stroke: 0.5px 
 }
 
 /* Global type + selection */
